--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <div class="ffy-content-pdf">
 
-	<iframe src="https://docs.google.com/viewer?url=https://fin4u-cms-dev.se.scb.co.th/getmedia/24e684a7-b2e3-49a0-9c6c-3bd04f3ff563/SSME-DL_Factsheet.pdf?ext=.pdf&embedded=true" style="width:100%; height:250px;" frameborder="0"></iframe>
-  =====================Iframe======================<br>
+<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+<script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+<script type="text/javascript">
+  document.addEventListener("adobe_dc_view_sdk.ready", function(){
+    var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+    adobeDCView.previewFile({
+      content:{ location:
+        { url: "https://acrobatservices.adobe.com/view-sdk-demo/PDFs/Bodea%20Brochure.pdf"}},
+      metaData:{fileName: "Bodea Brochure.pdf"}
+    },
+    {
+      embedMode: "SIZED_CONTAINER"
+    });
+  });
+</script>
+ =====================Iframe======================<br>
 <iframe class="ffy-pdf-embed" src="https://fin4u-cms-dev.se.scb.co.th/getmedia/24e684a7-b2e3-49a0-9c6c-3bd04f3ff563/SSME-DL_Factsheet.pdf?ext=.pdf#toolbar=0" width="100%" height="250px"></iframe>
 	
  
