--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
-<div class="ffy-content-pdf">
+<head>
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf_viewer.min.css" integrity="sha512-8LkkqbXJPviYJENC5Z8qC2uKz27x0tNgrZbzsAzt7zkw0/2lXtSdrslVhfrkcR+6LRmxjZxlqniSyWXimoaH5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<iframe src="https://docs.google.com/viewer?url=https://fin4u-cms-dev.se.scb.co.th/getmedia/24e684a7-b2e3-49a0-9c6c-3bd04f3ff563/SSME-DL_Factsheet.pdf?ext=.pdf&embedded=true" style="width:100%; height:250px;" frameborder="0"></iframe>
- =====================Iframe======================<br>
-<iframe class="ffy-pdf-embed" src="https://fin4u-cms-dev.se.scb.co.th/getmedia/24e684a7-b2e3-49a0-9c6c-3bd04f3ff563/SSME-DL_Factsheet.pdf?ext=.pdf#toolbar=0" width="100%" height="250px"></iframe>
-	
- 
-</div>
+</head>
+
+<body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.min.mjs" type="module"></script>	
+
+
+<script type="module">
+  // If absolute URL from the remote server is provided, configure the CORS
+  // header on that server.
+  var url = 'https://fin4u-cms-dev.se.scb.co.th/getmedia/24e684a7-b2e3-49a0-9c6c-3bd04f3ff563/SSME-DL_Factsheet.pdf?ext=.pdf#toolbar=0';
+
+  // Loaded via <script> tag, create shortcut to access PDF.js exports.
+  var { pdfjsLib } = globalThis;
+
+  // The workerSrc property shall be specified.
+  pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.mjs';
+
+  // Asynchronous download of PDF
+  var loadingTask = pdfjsLib.getDocument(url);
+  loadingTask.promise.then(function(pdf) {
+    console.log('PDF loaded');
+
+    // Fetch the first page
+    var pageNumber = 1;
+    pdf.getPage(pageNumber).then(function(page) {
+      console.log('Page loaded');
+
+      var scale = 1.5;
+      var viewport = page.getViewport({scale: scale});
+
+      // Prepare canvas using PDF page dimensions
+      var canvas = document.getElementById('the-canvas');
+      var context = canvas.getContext('2d');
+      canvas.height = viewport.height;
+      canvas.width = viewport.width;
+
+      // Render PDF page into canvas context
+      var renderContext = {
+        canvasContext: context,
+        viewport: viewport
+      };
+      var renderTask = page.render(renderContext);
+      renderTask.promise.then(function () {
+        console.log('Page rendered');
+      });
+    });
+  }, function (reason) {
+    // PDF loading error
+    console.error(reason);
+  });
+</script>
+
+<h1>PDF.js 'Hello, world!' example</h1>
+</body>
+<p>Please use <a href="https://mozilla.github.io/pdf.js/getting_started/#download"><i>official releases</i></a> in production environments.</p>
+
+<canvas id="the-canvas"></canvas>
