--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.min.mjs" type="module"></script>	
+<script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>	
 
 
 <script type="module">
