--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 </style>
 
 <script>   
-    url = 'https://github.com/mozilla/pdf.js/blob/master/test/pdfs/tracemonkey.pdf';
+    url = 'https://fin4u-cms-dev.se.scb.co.th/getmedia/24e684a7-b2e3-49a0-9c6c-3bd04f3ff563/SSME-DL_Factsheet.pdf?ext=.pdf#toolbar=0';
     var thePdf = null;
     var scale = 1;
     
