--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,7 @@
 <html>
    <head>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="pdf.js"></script>
-      <script src="jquery.js"></script>
+    <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>	
    </head>
    <body>
       <h1>PDF.js 'Hello, world!' example</h1>
