--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,18 @@
+<style>
+#holder {
+    background: #eee;
+    padding: 32px 0 16px 0;
+    height: 500px;
+    overflow: auto;
+}
+.canvas-wrapper{
+  margin-bottom: 16px;
+}
+canvas{
+  margin: 0 auto;
+  display: block;
+}
+</style>
 <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.0.385/build/pdf.min.js"></script>
  <div id="holder"></div> 
 <script>
